feat #8914 - Promotional Elements Uploaded double-click on Save (#8943)
* to test again

* prevent to click too many time on save button

* cleaning

* added sentry service

* added canSave method

* debuged and commented moveMovieMedia

* revert

* debug otherVideo upload

* ok

* added tooltip

* typo

* revert

* updated comment

* typo

Co-authored-by: bruce <delorme.bruce.michel@gmail.com>

--- a/apps/festival/festival/src/app/dashboard/tunnel/summary/summary.component.html
+++ b/apps/festival/festival/src/app/dashboard/tunnel/summary/summary.component.html
@@ -116,11 +116,13 @@
     </section>
 
     <!-- Submit -->
-    <button id="publish" test-id="publish" mat-flat-button color="accent" class="submit" (click)="submit()"
-      [disabled]="isPublished$ | async">
-      <span>Publish to Marketplace</span>
-      <mat-icon svgIcon="arrow_forward"></mat-icon>
-    </button>
+    <span class="submit" [matTooltip]="(uploadService.finalizedUpload | async) ? 'We\'re finishing the upload of your file first, please wait a few seconds before saving your Title.' : ''">
+      <button id="publish" test-id="publish" mat-flat-button color="accent" (click)="submit()"
+        [disabled]="(isPublished$ | async) || (uploadService.finalizedUpload | async)">
+        <span>Publish to Marketplace</span>
+        <mat-icon svgIcon="arrow_forward"></mat-icon>
+      </button>
+    </span>
     <p *ngIf="isPublished$ | async" class="submit mat-caption" >Already published!</p>
   </ng-container>
 
