--- a/libs/movie/src/lib/movie/form/media-videos/media-videos.component.html
+++ b/libs/movie/src/lib/movie/form/media-videos/media-videos.component.html
@@ -52,7 +52,14 @@
       <mat-checkbox [checked]="salesPitchForm.isPublic" (change)="salesPitchForm.togglePrivacy($event.checked)" color="primary" test-id="pitch-privacy">
         <b>Public</b> (Buyers can see video on Marketplace)
       </mat-checkbox>
-      <file-uploader [form]="salesPitchForm" [meta]="['movies', 'salesPitch', movieId]" accept="video" listenToChanges>
+      <file-uploader
+        [form]="salesPitchForm"
+        [meta]="['movies', 'salesPitch', movieId]"
+        accept="video"
+        (newSubscription)="shell.addSubToStack($event)"
+        listenToChanges
+        pushSubToStack
+      >
         <h3 title>Sales Pitch Video</h3>
       </file-uploader>
     </section>
