--- a/libs/media/src/lib/file/upload-widget/upload-widget.component.html
+++ b/libs/media/src/lib/file/upload-widget/upload-widget.component.html
@@ -23,7 +23,7 @@
 
                 <!-- Finished -->
                 <ng-template ngSwitchCase="success">
-                  <caption class="mat-caption succeeded"><em>Completed</em></caption>
+                  <caption test-id="upload-completed" class="mat-caption succeeded"><em>Completed</em></caption>
                 </ng-template>
 
                 <!-- Paused -->
