--- a/apps/festival/festival/src/app/dashboard/tunnel/media-screener/media-screener.component.html
+++ b/apps/festival/festival/src/app/dashboard/tunnel/media-screener/media-screener.component.html
@@ -11,6 +11,7 @@
         accept="video"
         listenToChanges
         pushSubToStack
+        test-id="screener-upload"
       >
         <h3 title>Upload Screener</h3>
       </file-uploader>
