--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -25,22 +25,22 @@
   </list-page-search>
 
   <!-- FILTERS (ng-content) -->
-  <list-filter>
+  <list-filter test-id="filters">
 
     <ng-template filter label="Sales Agent" [form]="searchForm.sellers">
       <algolia-chips-autocomplete index="org" displayWithPath="name" [filters]="['appModule:dashboard']"
-        [form]="searchForm.sellers" label="Search for a Sales Agent" placeholder="Organization name">
+        [form]="searchForm.sellers" label="Search for a Sales Agent" placeholder="Organization name" test-id="sales-agent">
       </algolia-chips-autocomplete>
     </ng-template>
 
     <ng-template filter label="Genre" [form]="searchForm.genres">
-      <chips-autocomplete [form]="searchForm.genres" scope="genres">
+      <chips-autocomplete [form]="searchForm.genres" scope="genres" test-id="genre">
         <mat-label>Genres</mat-label>
       </chips-autocomplete>
     </ng-template>
 
     <ng-template filter label="Country of Origin" [form]="searchForm.originCountries">
-      <chips-autocomplete [form]="searchForm.originCountries" placeholder="Country of Origin" scope="territories">
+      <chips-autocomplete [form]="searchForm.originCountries" placeholder="Country of Origin" scope="territories" test-id="country">
         <mat-label>Type and select Country</mat-label>
       </chips-autocomplete>
     </ng-template>
@@ -77,14 +77,14 @@
 
     <list-filter-buttons (data)="load($event)"></list-filter-buttons>
 
-    <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters">
+    <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters" test-id="clear-filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
       <span>Clear Filters</span>
     </button>
   </list-filter>
 
   <!-- TITLE COUNT (ng-content)-->
-  <list-page-description *ngIf="nbHits">
+  <list-page-description *ngIf="nbHits" test-id="titles-count">
     <span i18n class="mat-body-2">
       There {nbHits, plural, =1 {is} other {are}} {{ nbHits }} title{nbHits, plural, =1 {} other {s}}
       available.
