--- a/apps/festival/festival/src/app/marketplace/home/home.component.html
+++ b/apps/festival/festival/src/app/marketplace/home/home.component.html
@@ -113,7 +113,7 @@
       <section class="events-slider" bgAsset="events_slider_background.png" [attr.test-id]="section.title">
         <header fxLayout fxLayoutAlign="space-between center" class="dark-contrast-theme">
           <h2>{{ section.title }}</h2>
-          <a mat-button [routerLink]="section.link || '../event'" test-id="screenings" test-id="see-all">
+          <a mat-button [routerLink]="section.link || '../event'" test-id="see-all">
             <span>See all</span>
             <mat-icon svgIcon="arrow_forward"></mat-icon>
           </a>
