Allow file upload (video, pdf, images) in E2E #8900 (#8961)
* upgraded firebase-tools

* storage emulator for e2e

* test

* test

* test

* tes

* firebase tools same as docker image

* handle pdf files

* fixed to "11.0.1

* WIP upload image profile test

* test

* all in one

* test

* small fix

* test

* using force true

* test bucket

* cleaning

* cleaning env

* upload-widget check

* debug & test video upload

* typo

* test

* debug

* test

* unit test jwPlayer API and storage

* debug unit test

* intentional failing test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* typo

* test with falling test

* test

* cleaning and failing test

* should work

* should fail

* should work & debug

* cleaning

* updated flag for firebase firestore:delete

* typo comment

* test that storage file exists

* test after review

* increase test timeout

* fix instead of wait

* test rules

* test rules

* test rules

* test

* test better localstorage cleaning

* test

* test

* revert

* typo

* moved test id

* removed timeout

Co-authored-by: bruce <delorme.bruce.michel@gmail.com>

--- a/libs/media/src/lib/file/upload-widget/upload-widget.component.html
+++ b/libs/media/src/lib/file/upload-widget/upload-widget.component.html
@@ -23,7 +23,7 @@
 
                 <!-- Finished -->
                 <ng-template ngSwitchCase="success">
-                  <caption class="mat-caption succeeded"><em>Completed</em></caption>
+                  <caption class="mat-caption succeeded" test-id="upload-completed"><em>Completed</em></caption>
                 </ng-template>
 
                 <!-- Paused -->
