--- a/libs/organization/src/lib/organization/components/card/card.component.html
+++ b/libs/organization/src/lib/organization/components/card/card.component.html
@@ -1,4 +1,4 @@
-<a matRipple [routerLink]="org.id">
+<a matRipple [routerLink]="org.id" test-id="logo">
   <img [ref]="org.logo | storageFile:'orgs':'logo':org.id" asset="empty_organization.svg" type="logo" alt="organization logo">
 </a>
 <header fxLayout="column">
