--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -101,7 +101,7 @@
 
   <!-- TITLE CARD -->
   <ng-template listPageCard let-title>
-    <movie-card [movie]="title" [link]="['/c/o/marketplace/title',  title.objectID]" size="poster">
+    <movie-card [movie]="title" [link]="['/c/o/marketplace/title',  title.objectID]" size="poster" [attr.test-id]="'movie-card_' + title.objectID">
       <event-request-screening [movieId]="title.objectID" iconOnly></event-request-screening>
     </movie-card>
   </ng-template>
