--- a/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
@@ -32,7 +32,7 @@
         <contract-item [contract]="contract">
           <mat-form-field appearance="outline" price>
             <mat-label>Price</mat-label>
-            <input matInput type="number" min="0" [value]="contract.price" [attr.test-id]="'price-' + i"
+            <input matInput type="number" min="0" [value]="contract.price"
               (input)="setPrice(i, $event.target.value)" (blur)="updatePrice(i, $event.target.value)" />
             <mat-icon matPrefix [svgIcon]="currencyForm.value"></mat-icon>
             <mat-hint>Leave this field empty to request an asking price.</mat-hint>
