--- a/libs/movie/src/lib/movie/form/shooting-information/shooting-information.component.html
+++ b/libs/movie/src/lib/movie/form/shooting-information/shooting-information.component.html
@@ -54,14 +54,15 @@
                   <mat-label>Period</mat-label>
                   <mat-select [formControl]="shootingDateFrom.get('period')" placeholder="Period" test-id="start-period">
                     <mat-option>--</mat-option>
-                    <mat-option *ngFor="let period of periods" [value]="period">{{ period | toLabel: 'shootingPeriod' }}
+                    <mat-option *ngFor="let period of periods" [value]="period" [attr.test-id]="'option_' + period">
+                      {{ period | toLabel: 'shootingPeriod' }}
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                   <mat-label>Month</mat-label>
                   <mat-select matInput [formControl]="shootingDateFrom.get('month')" placeholder="Month" test-id="start-month">
-                    <mat-option *ngFor="let month of months" [value]="month">
+                    <mat-option *ngFor="let month of months" [value]="month" [attr.test-id]="'option_' + month">
                       {{ month | toLabel: 'months' }}
                     </mat-option>
                   </mat-select>
@@ -80,14 +81,14 @@
                   <mat-label>Period</mat-label>
                   <mat-select [formControl]="shootingDateTo.get('period')" placeholder="Period" test-id="end-period">
                     <mat-option>--</mat-option>
-                    <mat-option *ngFor=" let period of periods" [value]="period">
+                    <mat-option *ngFor=" let period of periods" [value]="period" [attr.test-id]="'option_' + period">
                       {{ period | toLabel: 'shootingPeriod' }}</mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                   <mat-label>Month</mat-label>
                   <mat-select matInput [formControl]="shootingDateTo.get('month')" placeholder="Month" test-id="end-month">
-                    <mat-option *ngFor="let month of months" [value]="month">
+                    <mat-option *ngFor="let month of months" [value]="month" [attr.test-id]="'option_' + month">
                       {{ month | toLabel: 'months' }}
                     </mat-option>
                   </mat-select>
