--- a/libs/ui/src/lib/list/page/list-page.component.html
+++ b/libs/ui/src/lib/list/page/list-page.component.html
@@ -48,7 +48,7 @@
       </div>
       <ng-container *ngIf="!listView; else displayList">
         <ul class="grid" [@fadeList]="items.length">
-          <li *ngFor="let item of items; trackBy:trackById; let i = index" [attr.test-id]="'item_' +i">
+          <li *ngFor="let item of items; trackBy:trackById" [attr.test-id]="'item_' + item.id">
             <!-- INSERT CARD -->
             <ng-template [ngTemplateOutlet]="cardTemplate" [ngTemplateOutletContext]="{$implicit: item}">
             </ng-template>
