--- a/libs/event/src/lib/form/create/create.component.html
+++ b/libs/event/src/lib/form/create/create.component.html
@@ -8,7 +8,7 @@
       <mat-label>Select Event Type</mat-label>
       <mat-select required formControlName="type" (selectionChange)="onTypeSelected($event)" test-id="event-type">
         <ng-container *ngFor="let type of types">
-          <mat-option [value]="type" [attr.test-id]="'type_' + type">{{ type | toLabel: 'eventTypes' }}</mat-option>
+          <mat-option [value]="type" [attr.test-id]="'option_' + type">{{ type | toLabel: 'eventTypes' }}</mat-option>
         </ng-container>
       </mat-select>
     </mat-form-field>
