--- a/libs/movie/src/lib/movie/form/summary/media-videos/media-videos.component.html
+++ b/libs/movie/src/lib/movie/form/summary/media-videos/media-videos.component.html
@@ -5,17 +5,19 @@
   </a>
 </h6>
 <ul class="controls">
-  <li>
-    <strong>Videos</strong>
-    <missing-control [control]="movie.promotional.get('videos').get('otherVideo')" [link]="link">
-      <ng-template let-video>
-        <article>
-          <bf-preview-modal [ref]="video"></bf-preview-modal>
-          {{ video.type | toLabel: 'hostedVideoTypes' }}{{ video.type ? ' - ' : '' }}{{ video.title | titlecase }} - {{ video.storagePath | fileName }}
-        </article>
-      </ng-template>
-    </missing-control>
-  </li>
+  <ng-container *ngIf="movie.promotional.get('videos').get('otherVideo') as otherVideo">
+    <li>
+      <strong>Video</strong>
+      <missing-control [control]="otherVideo.get('storagePath')" [link]="link">
+        <ng-template let-videoStorage>
+          <article>
+            <bf-preview-modal [ref]="otherVideo.value"></bf-preview-modal>
+            {{ otherVideo.value.type | toLabel: 'hostedVideoTypes' }}{{ otherVideo.value.type ? ' - ' : '' }}{{ otherVideo.value.title | titlecase }} - {{ videoStorage | fileName }}
+          </article>
+        </ng-template>
+      </missing-control>
+    </li>
+  </ng-container>
 
   <ng-container *ngIf="movie.promotional.get('videos').get('salesPitch') as salesPitch">
     <li>
