renammed to promotional video

--- a/libs/movie/src/lib/movie/components/video-upload/video-upload.component.html
+++ b/libs/movie/src/lib/movie/components/video-upload/video-upload.component.html
@@ -55,7 +55,7 @@
     </div>
 
     <form [formGroup]="form" fxLayout="column" fxLayoutAlign="center" fxFlex>
-      <h2>Upload other video</h2>
+      <h2>Upload promotional video</h2>
       <div formGroupName="otherVideo" fxLayout="column">
         <mat-form-field appearance="outline">
           <mat-label>Video title</mat-label>
