--- a/libs/movie/src/lib/movie/form/media-videos/media-videos.component.html
+++ b/libs/movie/src/lib/movie/form/media-videos/media-videos.component.html
@@ -1,7 +1,7 @@
 <tunnel-page>
   <ng-container tunnel-form>
 
-    <h3>Videos</h3>
+    <h3>Promotional Video</h3>
     <section fxLayout="column">
       <p>Upload video such as a trailer, teaser, promo reel, etc.</p>
       <span fxFlex fxLayout="row" fxLayoutGap="16px">
@@ -26,7 +26,7 @@
         listenToChanges
         pushSubToStack
       >
-      <h3 title>Upload Video</h3>
+      <h3 title>Upload Promotional Video</h3>
       </file-uploader>
     </section>
 
